Fix grid spacing

--- a/styles/page/playground.module.scss
+++ b/styles/page/playground.module.scss
@@ -3,10 +3,11 @@
 .grid {
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
-	gap: 40px;
+	gap: 20px;
 
 	@include medium {
 		grid-template-columns: repeat(3, 1fr);
+		gap: 40px;
 	}
 }
 
